# multiagent_challenges

./: .env.example  .gitignore  README.md  agent_base.py  analytical_squads.py  build_submission.py  data_loader.py  domain_swarm.py  dossier_builder.py  feature_engineer.py  gemini_models_output.txt  langfuse_utils.py  layer0_router.py  list_models.py  llm_provider.py  main.py  manifest.json  manifest_manager.py  mathematical_filter.py  metrics.py  models.py  orchestrator.py  output_writer.py  pipeline.py  prompt_loader.py  pyproject.toml  rag_store.py  requirements.txt  settings.py  token_compressor.py
docs/: Architecture_Deep_Dive.md  Configuration_Matrix.md  Deep_Dive.md  Developer_Manual.md  Domain_Adaptation_Guide.md  Feature_Engineering_Reference.md  Theory_of_Operation.md  Troubleshooting_Deep_Dive.md
prompts/: coordinator.txt  domain.txt  domain_agent.txt  layer0_nano.txt  orchestrator.txt  squad_health_behavioral.txt  squad_profile_context.txt  squad_spatial_patterns.txt  squad_temporal_routines.txt  system.txt
resources/case_1/evaluation/public_lev_1/: locations 3.json
resources/case_1/training/public_lev_1/: status 2.csv  users 2.json
resources/evaluation/public_lev_1/: status_new.csv  users 3.json
resources/training/public_lev_1/: locations 2.json
