[project]
name = "multiagent-mirror"
version = "1.0.0"
description = "Universal Adaptive Multi-Agent Framework for Reply Mirror Challenge"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "scikit-learn>=1.3,<2.0",
    "xgboost>=2.0,<3.0",
    "openai>=1.0,<2.0",
    "langfuse>=2.0,<3.0",
    "chromadb>=0.4,<1.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.0,<14.0",
]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
